--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -178,11 +178,20 @@
 
   </h4>
 
-  {% if paper.best_pdf_url %}
   <div style="float: right; padding: 4px;">
-  &nbsp;&nbsp;<a href="{{ paper.best_pdf_url }}" class="ui violet tag label"><i class="file icon"></i>fulltext</a>
+    &nbsp;&nbsp;
+    {% if paper.preservation == "bright" %}
+      {% if paper.best_pdf_url %}
+        <a href="{{ paper.best_pdf_url }}" class="ui green label" style="background-color: #2ca048;"><i class="file icon"></i>bright archive</a>
+      {% else %}
+        <span class="ui green label" style="background-color: #2ca048;">bright archive</span>
+      {% endif %}
+    {% elif paper.preservation == "dark" %}
+      <span class="ui green label" style="background-color: #6e7b71;">dark archive</span>
+    {% else %}
+      <span class="ui grey label" style="background-color: #b71818;">no archive</span>
+    {% endif %}
   </div>
-  {% endif %}
 
   {# ### AUTHOR ROW #}
   {% if paper.contrib_names %}
@@ -230,14 +239,22 @@
   {% if paper.doi %}
     <a href="https://doi.org/{{paper.doi }}" style="color: green;">doi:{{ paper.doi }}</a> &nbsp;
   {% endif %}
-  {% if paper.pmid %}
-    <a href="https://www.ncbi.nlm.nih.gov/pubmed/{{paper.pmid }}" style="color: green;">pmid:{{ paper.pmid }}</a> &nbsp;
-  {% endif %}
   {% if paper.pmcid %}
     <a href="https://pubmed.ncbi.nlm.nih.gov/{{paper.pmcid }}/" style="color: green;">pmcid:{{ paper.pmcid }}</a> &nbsp;
+  {% elif paper.pmid %}
+    <a href="https://www.ncbi.nlm.nih.gov/pubmed/{{paper.pmid }}" style="color: green;">pmid:{{ paper.pmid }}</a> &nbsp;
   {% endif %}
   {% if paper.arxiv_id %}
     <a href="https://arxiv.org/abs/{{paper.arxiv_id }}" style="color: green;">arXiv:{{ paper.arxiv_id }}</a> &nbsp;
+  {% endif %}
+  {% if paper.jstor_id %}
+    <a href="https://jstor.org/stable/{{paper.jstor_id }}/" style="color: green;">jstor:{{ paper.jstor_id }}</a> &nbsp;
+  {% endif %}
+  {% if paper.doaj_id %}
+    <a href="https://doaj.org/article/{{paper.doaj_id }}/" style="color: green;">doaj:{{ paper.doaj_id }}</a> &nbsp;
+  {% endif %}
+  {% if paper.doaj_id %}
+    <a href="https://dblp.org/rec/{{ paper.dblp_id }}.html" style="color: green;">dblp:{{ paper.dblp_id }}</a> &nbsp;
   {% endif %}
 
 {# WIP: elastic release work grouping searches
