--- a/python/fatcat_web/templates/release_search.html
+++ b/python/fatcat_web/templates/release_search.html
@@ -35,6 +35,16 @@
 <div class="ui container text">
 <br>
 
+{% if container_found and container_found.results %}
+  <div class="ui tiny info floating message" style="margin: 0em auto; max-width: 40em;">
+    <div class="header">Were you looking for this journal, instead of publications?</div>
+    <div style="padding-left: 0.5em;">
+      {{ entity_macros.container_search_result_row(container_found.results[0]) }}
+    </div>
+  </div>
+  <br clear="all">
+{% endif %}
+
 {% if found %}
   {% if found.results %}
 
