--- a/python/fatcat_web/templates/release_edit.html
+++ b/python/fatcat_web/templates/release_edit.html
@@ -2,7 +2,9 @@
 {% extends "base.html" %}
 
 {% block body %}
+
 {% block edit_form_prefix %}
+{{ edit_macros.edit_link_bar('release', existing_ident, 'form') }}
 <div class="ui segment">
 <h1 class="ui header">Edit Release Entity</h1>
 
