--- a/python/fatcat_web/templates/container_edit.html
+++ b/python/fatcat_web/templates/container_edit.html
@@ -2,19 +2,14 @@
 {% extends "base.html" %}
 
 {% block body %}
+
 {% block edit_form_prefix %}
+{{ edit_macros.edit_link_bar('container', existing_ident, 'form') }}
 <div class="ui segment">
 <h1 class="ui header">Edit Container Entity</h1>
 
 <form class="ui form" id="edit_container_form" method="POST" action="{% if editgroup %}/editgroup/{{ editgroup.editgroup_id }}{% endif %}/container/{{ existing_ident }}/edit">
 
-  <p>Experienced users can also use the <a href="{% if editgroup
-  %}/editgroup/{{ editgroup.editgroup_id }}{% endif %}/container/{{
-  existing_ident }}/edit/toml">TOML editing form</a> to access all metadata
-  fields in a raw format.
-  {% if not editgroup %}
-    You can also <a href="/container/{{ existing_ident }}/delete">delete this entity</a>.
-  {% endif %}
 {% endblock %}
 
   <p>See <a href="https://guide.fatcat.wiki/entity_container.html">the catalog
