--- a/python/fatcat_web/templates/file_edit.html
+++ b/python/fatcat_web/templates/file_edit.html
@@ -2,19 +2,14 @@
 {% extends "base.html" %}
 
 {% block body %}
+
 {% block edit_form_prefix %}
+{{ edit_macros.edit_link_bar(entity_type, existing_ident) }}
 <div class="ui segment">
 <h1 class="ui header">Edit File Entity</h1>
 
 <form class="ui form" id="edit_file_form" method="POST" action="{% if editgroup %}/editgroup/{{ editgroup.editgroup_id }}{% endif %}/file/{{ existing_ident }}/edit">
 
-  <p>Experienced users can also use the <a href="{% if editgroup
-  %}/editgroup/{{ editgroup.editgroup_id }}{% endif %}/file/{{
-  existing_ident }}/edit/toml">TOML editing form</a> to access all metadata
-  fields in a raw format.
-  {% if not editgroup %}
-    You can also <a href="/file/{{ existing_ident }}/delete">delete this entity</a>.
-  {% endif %}
 {% endblock %}
 
   <p>See <a href="https://guide.fatcat.wiki/entity_file.html">the catalog
