home: mention coverage visualization

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -63,7 +63,7 @@
         publications including journal articles, conference proceedings, and
         datasets.
         <p>Features include archival file-level metadata (verified digests and
-        long-term copies), work/edition grouping, an
+        long-term copies), a <b><a href="/coverage/search">preservation coverage visualizer</a></b>, work/edition grouping, an
         <b><a href="https://api.{{ config.FATCAT_DOMAIN }}">open API</a></b>,
         and public metadata dumps.
         &nbsp;<a href="/about">Read more...</a>
@@ -84,7 +84,7 @@
       </div>
       <div class="seven wide column">
         <a href="/coverage/search?q=is_oa%3Atrue+year%3A%3E1995+year%3A%3C%3D2019+%28type%3Aarticle-journal+OR+type%3Aarticle+OR+type%3Apaper-conference%29+%21doi_prefix%3A10.5281+%21doi_prefix%3A10.6084">
-          <img src="/static/fatcat_oa_preservation_jan2021.svg" style="width: 100%;">
+          <img alt="coverage visualization tool" src="/static/fatcat_oa_preservation_jan2021.svg" style="width: 100%;">
         </a>
       </div>
     </div>
