web: make homepage stackable (mobile)

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -53,7 +53,7 @@
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em;">
   <div class="ui text container" style="max-width: 800px!important;">
   <div class="ui centered grid">
-    <div class="row">
+    <div class="stackable row">
       <div class="four wide column">
         <!-- TODO: don't let it scale down -->
         <img src="/static/paper_man_confused.gif" width="130" alt="confused paper man">
@@ -76,7 +76,7 @@
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em;">
   <div class="ui text container" style="max-width: 1200px!important;">
   <div class="ui middle aligned divided centered grid">
-    <div class="row">
+    <div class="stackable row">
       <div class="eight wide column" style="font-size: 1.6rem; text-align: center;">
         <p>Our goal is to ensure long-term access to research content on the
         "scholarly web" by tracking holes in preservation coverage across
@@ -95,7 +95,7 @@
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em; background-color: #F5F5F5;">
   <div class="ui text container" style="max-width: 800px!important;">
   <div class="ui centered grid">
-    <div class="row">
+    <div class="stackable row">
       <div class="twelve wide column" style="font-size: 1.2rem;">
         <p>This service is hosted at the <b><a
         href="https://archive.org">Internet Archive</a></b>, a US
@@ -117,7 +117,7 @@
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em;">
   <div class="ui text container" style="max-width: 800px!important;">
   <div class="ui centered grid">
-    <div class="row">
+    <div class="stackable row">
       <div class="four wide column">
         <a href="https://scholar-qa.archive.org">
           <img src="/static/scholar-vaporwave-logo-small.png" width="170" alt="IA scholar logo">
