homepage: update scholar URL (not QA version)

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -119,12 +119,12 @@
   <div class="ui centered grid">
     <div class="stackable row">
       <div class="four wide column">
-        <a href="https://scholar-qa.archive.org">
+        <a href="https://scholar.archive.org">
           <img src="/static/scholar-vaporwave-logo-small.png" width="170" alt="IA scholar logo">
         </a>
       </div>
       <div class="twelve wide column" style="font-size: 1.2rem;">
-        <p><b><a href="https://scholar-qa.archive.org">Internet Archive Scholar</a></b>
+        <p><b><a href="https://scholar.archive.org">Internet Archive Scholar</a></b>
         is a sibling service, built on the Fatcat catalog, providing end-user
         access to and full-text search over research content across the
         Internet Archive's various holdings.
