web: remove newline from entity view template macro
Browsers were ignoring this, but some bots were crawling with a "%0A" in
the URL

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -48,8 +48,8 @@
     /{{ entity_type }}/{{ entity.ident }}
   {%- elif entity.revision -%}
     /{{ entity_type }}/rev/{{ entity.revision }}
-  {% endif %}
-  {% if expand %}?expand={{ expand}}{% endif %}">
+  {%- endif -%}
+  {%- if expand -%}?expand={{ expand}}{%- endif %}">
   JSON
   </a>
 </div>
