web: improve access button HTML

--- a/python/fatcat_web/templates/file_view.html
+++ b/python/fatcat_web/templates/file_view.html
@@ -55,9 +55,8 @@ No known archives or mirrors of this file.
     No Public URL
   </span>
 {% endif %}
-<br>
 
-<div class="ui top segment attached">
+<div class="ui top attached segment">
   {% if file.size != None %}
     <b>Size</b> &nbsp;{{ file.size|filesizeformat }}<br>
   {% endif %}
